Finished css styles (all resolutions) of Contacts, Delivery, Payment pages.

--- a/contacts.html
+++ b/contacts.html
@@ -87,12 +87,12 @@
                             <span class="title-underline nav-title-underline"></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link"
+                                    <a href="delivery.html" class="sub-nav__item-link"
                                         >Способы доставки</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link"
+                                    <a href="payment.html" class="sub-nav__item-link"
                                         >Способы оплаты</a
                                     >
                                 </li>
@@ -123,39 +123,47 @@
                     </div>
                     <div class="information_wrap">
                         <div class="info-img-block">
-                            <img src="img/contacts.jpg" alt="" class="info-img-block__image">
+                            <img src="img/contacts.jpg" alt="Наши контакты" class="info-img-block__image" />
                         </div>
                         <div class="info-text-block">
                             <ul class="contacts-list">
                                 <li class="cotacts-item">
-                                    <span class="cotacts-item__title">Телефон для звонков:</span
-                                    ><span class="cotacts-item__text">
-                                        <a href="tel:+79770129015" class="cotacts-item__link">+7 (977) 012-90-15</a></span
-                                    >
+                                    <p class="cotacts-item__title">Телефон для звонков:</p>
+                                    <p class="cotacts-item__text">
+                                        <a href="tel:+79770129015" class="cotacts-item__link"
+                                            >+7 (977) 012-90-15</a
+                                        >
+                                    </p>
                                 </li>
                                 <li class="cotacts-item">
-                                    <span class="cotacts-item__title">WhatsApp / Telegram:</span
-                                    ><span class="cotacts-item__text"
-                                        ><a href="https://telegram.im/@qualitas_store" class="cotacts-item__link"
+                                    <p class="cotacts-item__title">WhatsApp / Telegram:</p>
+                                    <p class="cotacts-item__text">
+                                        <a
+                                            href="https://telegram.im/@qualitas_store"
+                                            class="cotacts-item__link"
                                             >+7 (977) 012-90-15 (@qualitas_store)</a
-                                        ></span
-                                    >
-                                </li>
-                                <li class="cotacts-item"> 
-                                    <span class="cotacts-item__title">Email:</span
-                                    ><span class="cotacts-item__text"
-                                        ><a href="mailto:qualitas.store@yandex.ru" class="cotacts-item__link"
-                                            >qualitas.store@yandex.ru</a
-                                        ></span
-                                    >
+                                        >
+                                    </p>
                                 </li>
                                 <li class="cotacts-item">
-                                    <span class="cotacts-item__title">Instagram: </span
-                                    ><span class="cotacts-item__text"
-                                        ><a href="https://www.instagram.com/qualitas_leather/" class="cotacts-item__link"
+                                    <p class="cotacts-item__title">Email:</p>
+                                    <p class="cotacts-item__text">
+                                        <a
+                                            href="mailto:qualitas.store@yandex.ru"
+                                            class="cotacts-item__link"
+                                            >qualitas.store@yandex.ru</a
+                                        >
+                                    </p>
+                                </li>
+                                <li class="cotacts-item">
+                                    <p class="cotacts-item__title">Instagram:</p>
+                                    <p class="cotacts-item__text">
+                                        <a
+                                            href="https://www.instagram.com/qualitas_leather/"
+                                            class="cotacts-item__link"
                                             >#qualitas_leather</a
-                                        ></span
-                                    >
+                                        >
+                                    </p>
                                 </li>
                             </ul>
                         </div>
