--- a/product.html
+++ b/product.html
@@ -87,12 +87,12 @@
                             <span class="title-underline nav-title-underline"></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link"
+                                    <a href="delivery.html" class="sub-nav__item-link"
                                         >Способы доставки</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link"
+                                    <a href="payment.html" class="sub-nav__item-link"
                                         >Способы оплаты</a
                                     >
                                 </li>
