--- a/catagory.html
+++ b/catagory.html
@@ -37,28 +37,40 @@
                             <span class="title-underline nav-title-underline"></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Ремни</a>
+                                    <a href="catagory.html" class="sub-nav__item-link">Ремни</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Ремешки для часов</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Ремешки для часов</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Картхолдеры</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Картхолдеры</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Обложки для паспорта</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Обложки для паспорта</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Чехлы для ручек</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Чехлы для ручек</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Зажимы для денег</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Зажимы для денег</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Аксессуары</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Аксессуары</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Другое</a>
+                                    <a href="catagory.html" class="sub-nav__item-link">Другое</a>
                                 </li>
                             </ul>
                         </li>
@@ -74,16 +86,20 @@
                             <span class="title-underline nav-title-underline"></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Способы доставки</a>
+                                    <a href="delivery.html" class="sub-nav__item-link"
+                                        >Способы доставки</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Способы оплаты</a>
+                                    <a href="payment.html" class="sub-nav__item-link"
+                                        >Способы оплаты</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">О нас</a>
+                                    <a href="catagory.html" class="sub-nav__item-link">О нас</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Часто задаваемые вопросы</a
                                     >
                                 </li>
