Added HTML and some CSS of blog.html

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
         <title>Category</title>
     </head>
     <body>
-        <header class="header header_big header_category-page">
+        <header class="header header_big header_blog-page">
             <div class="container container-header">
                 <div class="logo header__logo">
                     <a href="index.html" class="logo__link">
@@ -114,7 +114,7 @@
             </div>
             <div class="container">
                 <div class="h1">
-                    <h1 class="h1__title h1-title_category">Кожаные ремни ручной работы</h1>
+                    <h1 class="h1__title h1-title_category">Блог мастерской кожаных изделий QUALITAS</h1>
                 </div>
             </div>
         </header>
@@ -123,7 +123,7 @@
             <div class="container">
                 <div class="category-items">
                     <div class="h2">
-                        <h2 class="h2__title">Каталог кожаных ремней ручной рыботы</h2>
+                        <h2 class="h2__title">Статьи о кожаных изделиях</h2>
                         <span class="title-underline"></span>
                     </div>
                     <div class="products-wraper">
