--- a/product.html
+++ b/product.html
@@ -76,7 +76,7 @@
                             </ul>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__item-link">Блог</a>
+                            <a href="blog.html" class="nav__item-link">Блог</a>
                             <span class="title-underline nav-title-underline"></span>
                         </li>
                         <li class="nav__item">
