Changed the CSS styles of the header H1

--- a/blog.html
+++ b/blog.html
@@ -113,8 +113,8 @@
                 </nav>
             </div>
             <div class="container">
-                <div class="h1">
-                    <h1 class="h1__title h1-title_category">Блог мастерской кожаных изделий QUALITAS</h1>
+                <div class="h1 h1_top-margin">
+                    <h1 class="h1__title">Блог мастерской кожаных изделий</h1>
                 </div>
             </div>
         </header>
