--- a/catagory.html
+++ b/catagory.html
@@ -113,8 +113,8 @@
                 </nav>
             </div>
             <div class="container">
-                <div class="h1">
-                    <h1 class="h1__title h1-title_category">Кожаные ремни ручной работы</h1>
+                <div class="h1 h1_top-margin">
+                    <h1 class="h1__title">Кожаные ремни ручной работы</h1>
                 </div>
             </div>
         </header>
