--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 </nav>
             </div>
             <div class="container">
-                <div class="h1 h1_yellow">
-                    <h1 class="h1__title h1-title_home">
+                <div class="h1 h1_yellow h1_top-margin">
+                    <h1 class="h1__title">
                         Мастерская кожаных изделий ручной работы
                     </h1>
                 </div>
