Finished css styles (all resolutions) of blog page (blog.html).

--- a/blog.html
+++ b/blog.html
@@ -121,148 +121,191 @@
 
         <section class="main">
             <div class="container">
-                <div class="category-items">
+                <div class="blog-items">
                     <div class="h2">
                         <h2 class="h2__title">Статьи о кожаных изделиях</h2>
                         <span class="title-underline"></span>
                     </div>
-                    <div class="products-wraper">
-                        <ul class="products-list">
-                            <li class="product">
-                                <a href="product.html" class="pruduct__link">
-                                    <div class="product__img-wrap">
+                    <div class="blog-wraper">
+                        <ul class="blog-list">
+                            <li class="blog-item">
+                                <a href="product.html" class="blog-item__link">
+                                    <div class="blog-item__img-wrap">
                                         <img
-                                            src="img/product/belt (1).jpg"
-                                            alt="Ремень из кожи буйвола коричневого цвета"
-                                            class="product__img"
+                                            src="img/blog/blog-item (1).jpg"
+                                            alt="Выбор кожи и фуринтуры"
+                                            class="blog-item__img"
                                         />
                                     </div>
-                                    <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета
+                                    <p class="blog-item__title">Выбор кожи и фуринтуры</p>
+                                    <p class="product-item__aticle">
+                                        Имеется спорная точка зрения, гласящая примерно следующее:
+                                        тщательные исследования конкурентов освещают чрезвычайно
+                                        интересные особенности картины в целом...
                                     </p>
-                                    <p class="product__text roduct__price">3 300 &#8381;</p>
+                                    <div class="blog-item__author-wrap">
+                                        <img
+                                            src="img/blog/blog-author.png"
+                                            alt=""
+                                            class="blog-item__author-img"
+                                        />
+                                        <div class="blog-item__author-txt-wrap">
+                                            <p class="blog-item__author-name">
+                                                Скрипников Владислав
+                                            </p>
+                                            <p class="blog-item__date">03 Марта 2022</p>
+                                        </div>
+                                    </div>
                                 </a>
                             </li>
-                            <li class="product">
-                                <a href="product.html" class="pruduct__link">
-                                    <div class="product__img-wrap">
+                            <li class="blog-item">
+                                <a href="product.html" class="blog-item__link">
+                                    <div class="blog-item__img-wrap">
                                         <img
-                                            src="img/product/belt (2).jpg"
-                                            alt="Ремень из кожи буйвола коричневого цвета"
-                                            class="product__img"
+                                            src="img/blog/blog-item (2).jpg"
+                                            alt="Выбор кожи и фуринтуры"
+                                            class="blog-item__img"
                                         />
                                     </div>
-                                    <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета ремень из кожи
-                                        буйвола коричневого цвета
+                                    <p class="blog-item__title">Выбор кожи и фуринтуры</p>
+                                    <p class="product-item__aticle">
+                                        Имеется спорная точка зрения, гласящая примерно следующее:
+                                        тщательные исследования конкурентов освещают чрезвычайно
+                                        интересные особенности картины в целом...
                                     </p>
-                                    <p class="product__text roduct__price">3 300 &#8381;</p>
+                                    <div class="blog-item__author-wrap">
+                                        <img
+                                            src="img/blog/blog-author.png"
+                                            alt=""
+                                            class="blog-item__author-img"
+                                        />
+                                        <div class="blog-item__author-txt-wrap">
+                                            <p class="blog-item__author-name">
+                                                Скрипников Владислав
+                                            </p>
+                                            <p class="blog-item__date">03 Марта 2022</p>
+                                        </div>
+                                    </div>
                                 </a>
                             </li>
-                            <li class="product">
-                                <a href="product.html" class="pruduct__link">
-                                    <div class="product__img-wrap">
+                            <li class="blog-item">
+                                <a href="product.html" class="blog-item__link">
+                                    <div class="blog-item__img-wrap">
                                         <img
-                                            src="img/product/belt (3).jpg"
-                                            alt="Ремень из кожи буйвола коричневого цвета"
-                                            class="product__img"
+                                            src="img/blog/blog-item (3).jpg"
+                                            alt="Выбор кожи и фуринтуры"
+                                            class="blog-item__img"
                                         />
                                     </div>
-                                    <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета
+                                    <p class="blog-item__title">Выбор кожи и фуринтуры</p>
+                                    <p class="product-item__aticle">
+                                        Имеется спорная точка зрения, гласящая примерно следующее:
+                                        тщательные исследования конкурентов освещают чрезвычайно
+                                        интересные особенности картины в целом...
                                     </p>
-                                    <p class="product__text roduct__price">3 300 &#8381;</p>
+                                    <div class="blog-item__author-wrap">
+                                        <img
+                                            src="img/blog/blog-author.png"
+                                            alt=""
+                                            class="blog-item__author-img"
+                                        />
+                                        <div class="blog-item__author-txt-wrap">
+                                            <p class="blog-item__author-name">
+                                                Скрипников Владислав
+                                            </p>
+                                            <p class="blog-item__date">03 Марта 2022</p>
+                                        </div>
+                                    </div>
                                 </a>
                             </li>
-                            <li class="product">
-                                <a href="product.html" class="pruduct__link">
-                                    <div class="product__img-wrap">
+                            <li class="blog-item">
+                                <a href="product.html" class="blog-item__link">
+                                    <div class="blog-item__img-wrap">
                                         <img
-                                            src="img/product/belt (4).jpg"
-                                            alt="Ремень из кожи буйвола коричневого цвета"
-                                            class="product__img"
+                                            src="img/blog/blog-item (4).jpg"
+                                            alt="Выбор кожи и фуринтуры"
+                                            class="blog-item__img"
                                         />
                                     </div>
-                                    <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета ремень из кожи
-                                        буйвола коричневого цвета
+                                    <p class="blog-item__title">Выбор кожи и фуринтуры</p>
+                                    <p class="product-item__aticle">
+                                        Имеется спорная точка зрения, гласящая примерно следующее:
+                                        тщательные исследования конкурентов освещают чрезвычайно
+                                        интересные особенности картины в целом...
                                     </p>
-                                    <p class="product__text roduct__price">3 300 &#8381;</p>
+                                    <div class="blog-item__author-wrap">
+                                        <img
+                                            src="img/blog/blog-author.png"
+                                            alt=""
+                                            class="blog-item__author-img"
+                                        />
+                                        <div class="blog-item__author-txt-wrap">
+                                            <p class="blog-item__author-name">
+                                                Скрипников Владислав
+                                            </p>
+                                            <p class="blog-item__date">03 Марта 2022</p>
+                                        </div>
+                                    </div>
                                 </a>
                             </li>
-                            <li class="product">
-                                <a href="product.html" class="pruduct__link">
-                                    <div class="product__img-wrap">
+                            <li class="blog-item">
+                                <a href="product.html" class="blog-item__link">
+                                    <div class="blog-item__img-wrap">
                                         <img
-                                            src="img/product/belt (5).jpg"
-                                            alt="Ремень из кожи буйвола коричневого цвета"
-                                            class="product__img"
+                                            src="img/blog/blog-item (5).jpg"
+                                            alt="Выбор кожи и фуринтуры"
+                                            class="blog-item__img"
                                         />
                                     </div>
-                                    <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета
+                                    <p class="blog-item__title">Выбор кожи и фуринтуры</p>
+                                    <p class="product-item__aticle">
+                                        Имеется спорная точка зрения, гласящая примерно следующее:
+                                        тщательные исследования конкурентов освещают чрезвычайно
+                                        интересные особенности картины в целом...
                                     </p>
-                                    <p class="product__text roduct__price">3 300 &#8381;</p>
+                                    <div class="blog-item__author-wrap">
+                                        <img
+                                            src="img/blog/blog-author.png"
+                                            alt=""
+                                            class="blog-item__author-img"
+                                        />
+                                        <div class="blog-item__author-txt-wrap">
+                                            <p class="blog-item__author-name">
+                                                Скрипников Владислав
+                                            </p>
+                                            <p class="blog-item__date">03 Марта 2022</p>
+                                        </div>
+                                    </div>
                                 </a>
                             </li>
-                            <li class="product">
-                                <a href="product.html" class="pruduct__link">
-                                    <div class="product__img-wrap">
+                            <li class="blog-item">
+                                <a href="product.html" class="blog-item__link">
+                                    <div class="blog-item__img-wrap">
                                         <img
-                                            src="img/product/belt (6).jpg"
-                                            alt="Ремень из кожи буйвола коричневого цвета"
-                                            class="product__img"
+                                            src="img/blog/blog-item (6).jpg"
+                                            alt="Выбор кожи и фуринтуры"
+                                            class="blog-item__img"
                                         />
                                     </div>
-                                    <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета
+                                    <p class="blog-item__title">Выбор кожи и фуринтуры</p>
+                                    <p class="product-item__aticle">
+                                        Имеется спорная точка зрения, гласящая примерно следующее:
+                                        тщательные исследования конкурентов освещают чрезвычайно
+                                        интересные особенности картины в целом...
                                     </p>
-                                    <p class="product__text roduct__price">3 300 &#8381;</p>
-                                </a>
-                            </li>
-                            <li class="product">
-                                <a href="product.html" class="pruduct__link">
-                                    <div class="product__img-wrap">
+                                    <div class="blog-item__author-wrap">
                                         <img
-                                            src="img/product/belt (7).jpg"
-                                            alt="Ремень из кожи буйвола коричневого цвета"
-                                            class="product__img"
+                                            src="img/blog/blog-author.png"
+                                            alt=""
+                                            class="blog-item__author-img"
                                         />
+                                        <div class="blog-item__author-txt-wrap">
+                                            <p class="blog-item__author-name">
+                                                Скрипников Владислав
+                                            </p>
+                                            <p class="blog-item__date">03 Марта 2022</p>
+                                        </div>
                                     </div>
-                                    <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета
-                                    </p>
-                                    <p class="product__text roduct__price">3 300 &#8381;</p>
-                                </a>
-                            </li>
-                            <li class="product">
-                                <a href="product.html" class="pruduct__link">
-                                    <div class="product__img-wrap">
-                                        <img
-                                            src="img/product/belt (8).jpg"
-                                            alt="Ремень из кожи буйвола коричневого цвета"
-                                            class="product__img"
-                                        />
-                                    </div>
-                                    <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета
-                                    </p>
-                                    <p class="product__text roduct__price">3 300 &#8381;</p>
-                                </a>
-                            </li>
-                            <li class="product">
-                                <a href="product.html" class="pruduct__link">
-                                    <div class="product__img-wrap">
-                                        <img
-                                            src="img/product/belt (9).jpg"
-                                            alt="Ремень из кожи буйвола коричневого цвета"
-                                            class="product__img"
-                                        />
-                                    </div>
-                                    <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета
-                                    </p>
-                                    <p class="product__text roduct__price">3 300 &#8381;</p>
                                 </a>
                             </li>
                         </ul>
