--- a/product.html
+++ b/product.html
@@ -206,6 +206,92 @@
                     </div>
                 </div>
             </div>
+            <div id="modal-window" class="modal-window">
+                <div class="modal-window__content">
+                    <h1 class="modal-window__title">Заполните форму</h1>
+                    <p class="modal-window__text">
+                        Укажите детали заказа и мы свяжемся с вами в ближайшее время
+                    </p>
+                    <form action="{% url 'makeorder' %}" method="POST" class="modal-window__form">
+                        <!-- {% csrf_token %} -->
+                        <ul class="modal-window__list">
+                            <li class="modal-window__list-item">
+                                <span class="modal-window__input_title">Изделие:</span>
+                                <span class="modal-window__input_title"
+                                    >Ремень из кожи буйвола коричневого цвета</span
+                                >
+
+                                <!-- <input class="display-none" type="text" value="{{request.get_full_path}}" name="get_full_path">
+                                <input class="display-none" type="text" value="{{prodItem.id}}" name="product_id"> -->
+                                <img
+                                    src="img/product/end-prod-small-1.jpg"
+                                    alt="маленькое изображение черной кожанной сумки"
+                                />
+                            </li>
+                            <li class="modal-window__list-item">
+                                <label class="modal-window__input_title" for="input-name"
+                                    >Как вас зовут:</label
+                                >
+                                <input
+                                    type="text"
+                                    name="customer_name"
+                                    class="modal-window__input"
+                                    placeholder="Имя"
+                                    id="input-name"
+                                    maxlength="200"
+                                    required=""
+                                    tabindex="0"
+                                />
+                            </li>
+                            <li class="modal-window__list-item">
+                                <label class="modal-window__input_title" for="input-telephone"
+                                    >Контактный телефон:</label
+                                >
+                                <input
+                                    type="text"
+                                    name="customer_telephone"
+                                    class="modal-window__input"
+                                    placeholder="Номер телефона"
+                                    id="input-telephone"
+                                    maxlength="200"
+                                    required=""
+                                    tabindex="0"
+                                />
+                            </li>
+                            <li class="modal-window__list-item">
+                                <label class="modal-window__input_title" for="input-commet"
+                                    >Комментарий к заказу:</label
+                                >
+                                <textarea
+                                    name="customer_comment"
+                                    cols="20"
+                                    rows="10"
+                                    class="modal-window__input"
+                                    placeholder="Комментарий"
+                                    id="input-commet"
+                                ></textarea>
+                            </li>
+                            <li class="modal-window__list-item">
+                                <input
+                                    class="main-button main-button__submit-modal"
+                                    type="submit"
+                                    value="Отправить"
+                                />
+                            </li>
+                        </ul>
+                    </form>
+                </div>
+                <div class="modal-window__order-true display-none">
+                    <br />
+                    Ваш заказ оформлен, мы свяжемся с Вами в ближайшее время. <br />
+                    Вы также можете написать нам в социальных сетях.
+                </div>
+                <div class="modal-window__order-false display-none">
+                    <br />
+                    Приносим извинения за временные неполадки. <br />
+                    Попробуйте оформить заказ подзднее или свяжитесь с нами в социальных сетях.
+                </div>
+            </div>
         </section>
 
         <footer class="footer">
