--- a/catagory.html
+++ b/catagory.html
@@ -94,15 +94,14 @@
                                     <a href="payment.html" class="sub-nav__item-link"
                                         >Способы оплаты</a
                                     >
-                                </li>
-                                <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link">О нас</a>
-                                </li>
-                                <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link"
-                                        >Часто задаваемые вопросы</a
-                                    >
-                                </li>
+                                    <li class="sub-nav__item">
+                                        <a href="aboutus.html" class="sub-nav__item-link">О нас</a>
+                                    </li>
+                                    <li class="sub-nav__item">
+                                        <a href="help.html" class="sub-nav__item-link"
+                                            >Часто задаваемые вопросы</a
+                                        >
+                                    </li>
                             </ul>
                         </li>
                         <li class="nav__item">
