--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/fancybox4/fancybox4.css" />
+        <!-- <link rel="stylesheet" href="css/fancybox4/fancybox4.css" /> -->
         <link rel="stylesheet" href="css/style.css" />
         <title>Delivery</title>
     </head>
@@ -119,25 +119,7 @@
             <div class="container">
                 <div class="information">
                     <div class="h1 h1_end-product">
-                        <h1 class="h1__title h1-title_end-product">Способы оплаты</h1>
-                    </div>
-                    <div class="information_wrap">
-                        <div class="info-img-block">
-                            <img src="img/payment.jpg" alt="" class="info-img-block__image" />
-                        </div>
-                        <div class="info-text-block">
-                            <div class="info-text-block__item">
-                                <p class="info-text-block__p">
-                                    Переводом на банковскую карту Сбербанк, Тинькофф <br>(по номеру
-                                    счета или телефона)
-                                </p>
-                            </div>
-                            <div class="info-text-block__item">
-                                <p class="info-text-block__p">
-                                    Переводом на расчетный счет <br>(для юридических лиц и ИП)
-                                </p>
-                            </div>
-                        </div>
+                        <h1 class="h1__title h1-title_end-product">Данная страница будет добавлена в ближайшее время</h1>
                     </div>
                 </div>
             </div>
@@ -202,6 +184,6 @@
         </footer>
     </body>
     <!-- Подключаем файл скриптов -->
-    <script src="js/fancybox4/fancybox.umd.js"></script>
+    <!-- <script src="js/fancybox4/fancybox.umd.js"></script> -->
     <script src="js/script.js"></script>
 </html>
