--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link">О нас</a>
+                                    <a href="aboutus.html" class="sub-nav__item-link">О нас</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link"
+                                    <a href="help.html" class="sub-nav__item-link"
                                         >Часто задаваемые вопросы</a
                                     >
                                 </li>
