Added stub pages for "end blog page".

--- a/blog.html
+++ b/blog.html
@@ -129,7 +129,7 @@
                     <div class="blog-wraper">
                         <ul class="blog-list">
                             <li class="blog-item">
-                                <a href="product.html" class="blog-item__link">
+                                <a href="finalblogpage.html" class="blog-item__link">
                                     <div class="blog-item__img-wrap">
                                         <img
                                             src="img/blog/blog-item (1).jpg"
@@ -159,7 +159,7 @@
                                 </a>
                             </li>
                             <li class="blog-item">
-                                <a href="product.html" class="blog-item__link">
+                                <a href="finalblogpage.html" class="blog-item__link">
                                     <div class="blog-item__img-wrap">
                                         <img
                                             src="img/blog/blog-item (2).jpg"
@@ -189,7 +189,7 @@
                                 </a>
                             </li>
                             <li class="blog-item">
-                                <a href="product.html" class="blog-item__link">
+                                <a href="finalblogpage.html" class="blog-item__link">
                                     <div class="blog-item__img-wrap">
                                         <img
                                             src="img/blog/blog-item (3).jpg"
@@ -219,7 +219,7 @@
                                 </a>
                             </li>
                             <li class="blog-item">
-                                <a href="product.html" class="blog-item__link">
+                                <a href="finalblogpage.html" class="blog-item__link">
                                     <div class="blog-item__img-wrap">
                                         <img
                                             src="img/blog/blog-item (4).jpg"
@@ -249,7 +249,7 @@
                                 </a>
                             </li>
                             <li class="blog-item">
-                                <a href="product.html" class="blog-item__link">
+                                <a href="finalblogpage.html" class="blog-item__link">
                                     <div class="blog-item__img-wrap">
                                         <img
                                             src="img/blog/blog-item (5).jpg"
@@ -279,7 +279,7 @@
                                 </a>
                             </li>
                             <li class="blog-item">
-                                <a href="product.html" class="blog-item__link">
+                                <a href="finalblogpage.html" class="blog-item__link">
                                     <div class="blog-item__img-wrap">
                                         <img
                                             src="img/blog/blog-item (6).jpg"
